- Representação do capotraste - Cordas soldas - Cordas que não são tocadas - Destaque para pestana

--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@ $("#teste").html(
 		acordeNome: 'D',
 		descForm: 'acordeD',
 	})
+	+ resolvDiagrama({
+		notas: [
+			{ corda: 6, nulo: true },
+			{ corda: 5, casa: 3 , dedo: 3 },
+			{ corda: 4, casa: 2 , dedo: 2 },
+			{ corda: 3, casa: 0 },
+			{ corda: 2, casa: 1 , dedo: 1 },
+			{ corda: 1, casa: 0 },
+		],
+		acordeNome: 'D',
+		descForm: 'acordeD2',
+		capotraste: 2,
+	})
 );
 
 </script>
